--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ body {
   display: flex;
   flex: auto;
   padding: 12px 100px;
+  justify-content: center;
 }
 
 .header {
@@ -152,7 +153,7 @@ p {
 }
 
 .pics p {
-    width: 140px
+  width: 140px;
 }
 
 .pics div {
@@ -196,6 +197,7 @@ p {
   background-color: #3882f6;
   color: white;
   border-radius: 5px;
+  max-width: 600px
 }
 
 .CTA-box p,
@@ -211,4 +213,3 @@ p {
 h3 {
   margin: 0;
 }
-
